<resources>
    <string name="app_name">Story App</string>
    <string name="intro">Find story from any other user who learn on dicoding to get inspired.</string>
    <string name="app_logo">App logo</string>
    <string name="start">Start</string>
    <string name="login_title">Login</string>
    <string name="login_subtitle">To see other user story</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="to_register">Doesn\'t have account? Register here </string>
    <string name="login">Login</string>
    <string name="register_title">Register</string>
    <string name="register_subtitle">Register and find interesting story</string>
    <string name="register">Signup</string>
    <string name="to_login">Already have account? Login Here</string>
    <string name="name">Name</string>
    <string name="wrong_email_format">Wrong email format!</string>
    <string name="wrong_password_format">Password must be at least 6 character!</string>
    <string name="something_wrong">Something wrong</string>
    <string name="wrong_name_format">Invalid name!</string>
    <string name="signup_success">Account created successfully!</string>
    <string name="image_story">image story</string>
    <string name="logo_vertical">logo vertical</string>
    <string name="no_data">No Data</string>
    <string name="to_main_screen">Go back to main screen</string>
    <string name="to_add_story">to add story</string>
    <string name="add_story">Add New Story</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="to_capture">to capture</string>
    <string name="to_switch_camera">to switch camera</string>
    <string name="no_permission">\"No permission\"</string>
    <string name="take_picture_failed">\"Failed to take a picture.\"</string>
    <string name="start_camera_failed">\"Failed to launch camera.\"</string>
    <string name="no_file">Please select image first</string>
    <string name="to_settings">go to settings</string>
    <string name="setting">Settings</string>
    <string name="app_version_footnote">Story App v1.0.0</string>
    <string name="language">Language</string>
    <string name="log_out">Log Out</string>
    <string name="appwidget_text">Dicoding stories</string>
    <string name="app_widget_description">List of dicoding users story</string>
    <string name="retry">Retry</string>
    <string name="to_maps">go to maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location_not_found">Location is not found. Try Again</string>
</resources>